force-app/main/default/objects/Decline_reason__c/Decline_reason__c.object-meta.xml
<CustomObject>
    <description>Official reasons for decline</description>
    <label>Decline reason</label>
    <nameField>
        <label>Decline reason Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decline reasons</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>