force-app/main/default/objects/Decline_reason__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, then this decline reason is considered active and may be used in profiles and/or proposals.</description>
    <inlineHelpText>If checked, then this decline reason is considered active and may be used in profiles and/or proposals.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>