force-app/main/default/objects/Decline_reason__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description and explanation of this decline reason</description>
    <inlineHelpText>Description and explanation of this decline reason</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>