force-app/main/default/objects/Decline_reason__c/fields/For_profile__c.field-meta.xml
<CustomField>
    <fullName>For_profile__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This decline reason is appropriate when declining a profile</description>
    <inlineHelpText>This decline reason is appropriate when declining a profile</inlineHelpText>
    <label>For profile</label>
    <type>Checkbox</type>
</CustomField>