force-app/main/default/objects/Decline_reason__c/fields/For_proposal__c.field-meta.xml
<CustomField>
    <fullName>For_proposal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This decline reason is appropriate when declining a proposal</description>
    <inlineHelpText>This decline reason is appropriate when declining a proposal</inlineHelpText>
    <label>For proposal</label>
    <type>Checkbox</type>
</CustomField>