force-app/main/default/objects/Decline_reason__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>For_profile__c</columns>
    <columns>For_proposal__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>