force-app/main/default/objects/Decline_reason__c/listViews/Profile.listView-meta.xml
<ListView>
    <fullName>Profile</fullName>
    <columns>NAME</columns>
    <columns>For_profile__c</columns>
    <columns>For_proposal__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>For_profile__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Profile</label>
</ListView>