force-app/main/default/objects/Decline_reason__c/listViews/Proposal.listView-meta.xml
<ListView>
    <fullName>Proposal</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>For_profile__c</columns>
    <columns>For_proposal__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>For_proposal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Proposal</label>
</ListView>